--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ html.dark-mode, body.dark-mode {
 }
 
 #about {
-    margin-top: 100px; /* Adjust the value as needed */
+    margin-top: 100px; 
 }
 
 /* Container */
@@ -61,10 +61,10 @@ header h1 {
 
 #logo {
     position: absolute;
-    top: 50%;
+    top: 55%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 250px;
+    width: 200px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -73,7 +73,7 @@ header h1 {
 
 #logo-text {
     position: absolute;
-    bottom: 31%; /* Adjust bottom position as needed */
+    bottom: 28%; 
     left: 50%;
     transform: translateX(-50%);
     font-size: 3rem;
@@ -169,11 +169,8 @@ nav {
         position: absolute;
     }
 
-    main {
-        height: 50em;
-    }
     #logo-text {
-        bottom: 8%;
+        bottom: 10%;
     }
 
     .menu-toggle {
@@ -206,14 +203,14 @@ nav {
 
     .navbar li {
         width: 100%;
-        padding: 10px 0; /* Add padding to create more vertical space */
+        padding: 10px 0; 
         margin: 0;
     }
 
     .navbar a {
         display: block;
         width: 100%;
-        padding: 15px; /* Increase padding to create more vertical space */
+        padding: 15px; 
         text-align: center;
         color: #fff;
         box-sizing: border-box;
@@ -236,7 +233,19 @@ nav {
     .menu-toggle {
         display: none;
     }
+    .media-section {
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
+        gap: 20px;
+    }
+
+    .instagram-section, .spotify-section {
+        flex: 1;
+    }
 }
+
+
 
 /* Main Content */
 main {
@@ -247,8 +256,14 @@ main {
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 100em;
+    height: 85.9em;
     transition: background-color 0.3s, color 0.3s;
+}
+/* Rounded Corners */
+.welcome-box,
+section,
+.modal-content {
+    border-radius: 10px;
 }
 
 main.dark-mode {
