refactor: Update media query breakpoint to 769px in styles.css

--- a/styles.css
+++ b/styles.css
@@ -152,7 +152,7 @@ nav {
 
 /* laptop specific styles */
 
-@media (min-width: 769px) {
+@media (max-width: 769px) {
     .menu-toggle {
         display: none;
     }
