--- a/styles.css
+++ b/styles.css
@@ -167,7 +167,7 @@ nav {
         flex: 1;
     }
     #logo-text {
-        bottom: 10vh;
+        bottom: vh;
     }
 }
 
@@ -251,7 +251,7 @@ nav {
 }
 
 /* Mobile Specific Styles */
-@media (min-width: 767px) { 
+@media (max-width: 767px) { 
     nav {
         display: fixed;
         justify-content: space-between;
